<resources>
    <string name="app_name" translatable="false">TP2</string>
    <string name="LoadingText">Loading %d/%d …</string>
    <string name="TeamNames" translatable="false">Alexis Millette\nOlivier Larue\nPierre-Antoine Lajoie</string>
    <string name="ReservedName" translatable="false">Tenretni - 2021®</string>
    <string name="navBarTickets">Tickets</string>
    <string name="navBarGateways">Gateways</string>
    <string name="navBarNetwork">Network</string>
    <string name="onlineStatusGateway">Online</string>
    <string name="offlineStatusGateway">Offline</string>
    <string name="txvReboot">Next reboot at: </string>
    <string name="txvUpdate">Last update: </string>
    <string name="btnUpdateTxt">Update</string>
    <string name="BtnReboottxt">Reboot</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_canceled">QR scan has been canceled</string>
    <string name="missing_permission">Missing permissions</string>
    <string name="btnOpen">OPEN</string>
    <string name="btnSolve">SOLVE</string>
    <string name="btnInstall">INSTALL</string>

    <string name="pingString" translatable="false">%d ns</string>
    <string name="ebpsString" translatable="false">%.3f Ebps</string>
    <string name="infoOfflineGateway" translatable="false">N/A</string>
    <string name="gatewayText">Gateway</string>
    <string name="gatewayInstalled">Gateway successfully installed</string>
    <string name="ticketsTitle">Tickets</string>
    <string name="networkTitle">Network</string>
    <string name="gatewaysTitle">Gateways</string>
</resources>