<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txvLoading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/tenretni" />

    <TextView
        android:id="@+id/txvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txvTeamNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvLogo"
        tools:text="@string/LoadingText" />


    <TextView
        android:id="@+id/txvTeamNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TeamNames"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/txvReservedName"
        app:layout_constraintEnd_toEndOf="@+id/txvReservedName"
        app:layout_constraintStart_toStartOf="@+id/txvReservedName" />

    <TextView
        android:id="@+id/txvReservedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ReservedName"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/pgbLoading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pgbLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:progress="2" />

</androidx.constraintlayout.widget.ConstraintLayout>